--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
 
     <ul>
         <li>
+            minimal musical note reading,
+            (<a href="tuner.html" target="_blank" title="Tuner" aria-label="Open Tuner in a new tab.">tuner</a>)
+        </li>
+        <li>
             collaborative and customizable budgeting,
             (<a href="https://www.airtable.com/universe/expaZVZSRDqLWgtn7/halfdollar" target="_blank" title="Halfdollar" aria-label="Open the Halfdollar budgeting template in a new tab.">halfdollar</a>)
         </li>
