--- a/morning-haven.html
+++ b/morning-haven.html
@@ -34,6 +34,8 @@
 
     <p>finding our way - utthita parshvakonasana (<a href="https://en.wikipedia.org/wiki/Utthita_Parshvakonasana" target="_blank" title="Utthita Parshvakonasana" aria-label="Open Utthita Parshvakonasana in a new tab.">side angle</a>)</p>
 
+    <p>existing - virabhadrasana i (<a href="https://en.wikipedia.org/wiki/Virabhadrasana" target="_blank" title="Virabhadrasana" aria-label="Open Virabhadrasana in a new tab.">warrior 1</a>)</p>
+
     <p>being one with the creatures - bidalasana (<a href="https://en.wikipedia.org/wiki/Utthita_Parshvakonasana" target="_blank" title="Bidalasana" aria-label="Open Bidalasana in a new tab.">cat cow</a>)</p>
 
     <p>remembering where we come from - bālāsana (<a href="https://en.wikipedia.org/wiki/Balasana" target="_blank" title="Bālāsana" aria-label="Open Bālāsana in a new tab.">child</a>)</p>
