--- a/quick-sketch.html
+++ b/quick-sketch.html
@@ -116,11 +116,22 @@
     });
 
     saveBtn.addEventListener('click', () => {
-      const link = document.createElement('a');
-      link.download = 'sketch.png';
-      link.href = canvas.toDataURL();
-      link.click();
-    });
+        const now = new Date();
+        const year = now.getFullYear();
+        const month = String(now.getMonth() + 1).padStart(2, '0'); // Months are 0-indexed
+        const day = String(now.getDate()).padStart(2, '0');
+        const hours = String(now.getHours()).padStart(2, '0');
+        const minutes = String(now.getMinutes()).padStart(2, '0');
+        const seconds = String(now.getSeconds()).padStart(2, '0');
+
+        const timestamp = `${year}-${month}-${day}-${hours}-${minutes}-${seconds}`;
+        const filename = `quick-sketch-${timestamp}.png`;
+
+        const link = document.createElement('a');
+        link.download = filename;
+        link.href = canvas.toDataURL();
+        link.click();
+     });
 
     resizeCanvas();
   </script>
