--- a/quick-sketch.html
+++ b/quick-sketch.html
@@ -22,8 +22,8 @@
 
 <body>
   <div class="button-group" id="sketch-controls">
-    <button id="clearBtn">Clear</button>
-    <button id="saveBtn">Save</button>
+    <button id="clearBtn" style="color: #000">Clear</button>
+    <button id="saveBtn" style="color: #000">Save</button>
   </div>
   <canvas id="drawingCanvas" style="width: 100vw; height: 100vh;"></canvas>
 
