--- a/ichiattimo.html
+++ b/ichiattimo.html
@@ -20,7 +20,7 @@
 
     <p>a moment to meet with full attention. the intentionality of slowing down to inhabit time as it passes, found in the warmth of a cup of tea; in the pages of a short book. these books — often of art, poetry, or reflection — become companions in this moment, chosen precisely because they are small enough to be held in a single breath of time.</p>
 
-    <p>i collect these books, these moments. not to be preserved, but to practice noticing them. each one brief, ungraspable, and complete — an ichiattimo.</p>
+    <p>i collect these stories, these moments. not to be preserved, but to practice noticing them. each one brief, ungraspable, and complete — an ichiattimo.</p>
 
 </body>
 
