--- a/bisnoni.html
+++ b/bisnoni.html
@@ -16,7 +16,7 @@
 
     <script src='as-dithered-image.js'></script>
 
-    <as-dithered-image class="full" src="bisnoni.png" crunch="1"></as-dithered-image>
+    <as-dithered-image id="bisnoni-image" src="bisnoni.png" crunch="1"></as-dithered-image>
 
     <div class="button-group">
         <button onclick="switchLanguage('en')">
