--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
         </li>
     </ul>
 
+    <h2>projects _</h2>
+
+    <ul>
+        <li>
+            invite-only, popup italian dinner in baltimore,
+            (<a href="bisnoni.html" target="_blank" title="Bisnoni" aria-label="Open Bisnoni in a new tab.">bisnoni</a>)
+        </li>
+        <li>
+            fantastical quest for belonging in two parts — book and album,
+            (a tree like me)
+        </li>
+    </ul>
+
     <h2>music _</h2>
 
     <ul>
