--- a/instrument.html
+++ b/instrument.html
@@ -15,159 +15,126 @@
 
 <body id="instrument-container">
 
-  <label for="key">Key</label>
-  <select id="key">
-    <option>C</option><option>C#</option><option>D</option><option>D#</option><option>E</option><option>F</option>
-    <option>F#</option><option>G</option><option>G#</option><option>A</option><option>A#</option><option>B</option>
-  </select>
+  <label for="key" style="text-align: center;">Key</label>
+  <div class="button-group" style="margin-top: 0;">
+    <button class="key-btn">C</button><button class="key-btn">C#</button><button class="key-btn">D</button>
+    <button class="key-btn">D#</button><button class="key-btn">E</button><button class="key-btn">F</button>
+    <button class="key-btn">F#</button><button class="key-btn">G</button><button class="key-btn">G#</button>
+    <button class="key-btn">A</button><button class="key-btn">A#</button><button class="key-btn">B</button>
+  </div>
 
-  <label for="scale">Scale</label>
-  <select id="scale">
-    <option value="major">Major</option>
-    <option value="minor">Minor</option>
-  </select>
+  <label for="scale" style="text-align: center;">Scale</label>
+  <div class="button-group" style="margin-top: 0;">
+    <button class="scale-btn">Major</button>
+    <button class="scale-btn">Minor</button>
+  </div>
+
+  <div id="current-selection" style="text-align: center; font-size: 1000%; line-height: 1; margin: 100px 0;">C Major</div>
 
   <button id="toggle">Start Drone</button>
 
-  <label for="bpm">Metronome BPM</label>
-  <input id="bpm" type="number" min="20" max="300" value="100" />
-
-  <label for="metronomeOctave">Metronome Octave</label>
-  <input id="metronomeOctave" type="number" min="1" max="6" value="4" />
-
-  <button id="toggleMetronome">Start Metronome</button>
-
   <script>
     const scales = {
-      major: [0, 2, 4, 5, 7, 9, 11],
+      major: [0, 2, 4, 5, 7, 9],
       minor: [0, 2, 3, 5, 7, 8, 10]
     };
 
-    let synth = new Tone.PolySynth(Tone.Synth, {
-      maxPolyphony: 16,
-      volume: -25,
-      oscillator: {
-        type: "sine"
-      },
-      envelope: {
-        attack: 4,
-        decay: 1,
-        sustain: 0.5,
-        release: 6
-      }
-    }).toDestination();
+    let selectedKey = "C";
+    let selectedScale = "major";
+    let rootSynth, intervalId, droneActive = false;
+    const activeNotes = new Map();
 
-    const reverb = new Tone.Reverb({ decay: 6, wet: 0.4 }).toDestination();
-    const limiter = new Tone.Limiter(-6).toDestination();
-    synth.chain(reverb, limiter);
+    const reverb = new Tone.Reverb({ decay: 3, wet: 1 }).toDestination();
+    // const delay = new Tone.FeedbackDelay({ delayTime: "8n", feedback: 0.3, wet: 0.6 }).toDestination();
 
-    let activeNotes = new Set();
-    let intervalId;
-    let rootNote;
-    let rootSynth;
+    function getScaleNotes() {
+      return scales[selectedScale].map(i => Tone.Frequency(`${selectedKey}3`).transpose(i).toNote());
+    }
 
-    let metronomeSynth = new Tone.Synth({
-      oscillator: { type: "sine" },
-      envelope: { attack: 0.01, decay: 0.1, sustain: 0, release: 0.2 }
-    }).toDestination();
-
-    let metronomeInterval;
-
-    function getNotes(key, scaleName, baseOctave = 3) {
-      const semitones = scales[scaleName];
-      const fullNotes = [];
-
-      for (let i = 0; i <= 12; i++) {
-        const octaveShift = Math.floor(i / semitones.length);
-        const semitone = semitones[i % semitones.length];
-        const midi = Tone.Frequency(`${key}${baseOctave}`, "note").toMidi() + semitone + (12 * octaveShift);
-        if (octaveShift < 2) {
-          fullNotes.push(Tone.Frequency(midi, "midi").toNote());
-        }
-      }
-
-      return fullNotes;
+    function updateCurrentSelection() {
+      document.getElementById('current-selection').textContent = `${selectedKey} ${selectedScale.charAt(0).toUpperCase() + selectedScale.slice(1)}`;
     }
 
     async function startDrone() {
-      await Tone.start();
-      const key = document.getElementById('key').value;
-      const scale = document.getElementById('scale').value;
-      const notes = getNotes(key, scale);
+  await Tone.start();
+  droneActive = true;
+  const notes = getScaleNotes();
+  
+  rootSynth = new Tone.PolySynth({
+    maxPolyphony: 5,
+    options: { oscillator: { type: 'triangle' } }
+  }).connect(reverb);
 
-      rootNote = Tone.Frequency(`${key}3`).toNote();
-      synth.triggerAttack(rootNote);
-      activeNotes.add(rootNote);
+  rootSynth.volume.value = -Infinity;  // Start muted
+  rootSynth.triggerAttack([notes[0]]);
 
-      intervalId = setInterval(() => {
-        const candidates = notes.filter(n => !activeNotes.has(n));
-        const chance = Math.random();
+  // Fade in over 1 second to -6 dB
+  rootSynth.volume.linearRampTo(-6, 1);
 
-        if (chance < 0.8 && candidates.length > 0) {
-          const note = candidates[Math.floor(Math.random() * candidates.length)];
-          synth.triggerAttack(note);
-          activeNotes.add(note);
-        } else if (activeNotes.size > 1) {
-          const removable = Array.from(activeNotes).filter(n => n !== rootNote);
-          const note = removable[Math.floor(Math.random() * removable.length)];
-          synth.triggerRelease(note);
-          activeNotes.delete(note);
-        }
-      }, 1500);
+  let lastPlayedIndex = 0;
+
+  intervalId = setInterval(() => {
+    if (!droneActive) return;
+
+    const availableNotes = notes.slice(1);
+    const rangeStart = Math.max(0, lastPlayedIndex - 2);
+    const rangeEnd = Math.min(availableNotes.length - 1, lastPlayedIndex + 2);
+
+    const possibleNotes = availableNotes.slice(rangeStart, rangeEnd + 1);
+
+    const randomNote = possibleNotes[Math.floor(Math.random() * possibleNotes.length)];
+    const newIndex = availableNotes.indexOf(randomNote);
+
+    if (activeNotes.has(randomNote)) {
+      rootSynth.triggerRelease(randomNote);
+      activeNotes.delete(randomNote);
+    } else if (activeNotes.size < 2) {
+      // Create a smooth fade-in using GainNode
+      const gain = new Tone.Gain(0).toDestination();
+      rootSynth.connect(gain);
+      gain.gain.linearRampTo(1, 1); // 1-second fade-in
+      
+      rootSynth.triggerAttack(randomNote);
+      activeNotes.set(randomNote, { gainNode: gain, note: randomNote });
+      lastPlayedIndex = newIndex;
+    }
+  }, 2000);
+}
+
+    async function smoothTransition(newKey, newScale) {
+      if (droneActive) {
+        clearInterval(intervalId);
+        rootSynth.releaseAll();
+        activeNotes.clear();
+        await startDrone();
+      }
     }
 
-    function stopDrone() {
-      clearInterval(intervalId);
-      synth.releaseAll();
-      activeNotes.clear();
-    }
-
-    function startMetronome() {
-      const bpm = parseInt(document.getElementById('bpm').value);
-      const key = document.getElementById('key').value;
-      const octave = parseInt(document.getElementById('metronomeOctave').value);
-      const root = Tone.Frequency(`${key}${octave}`).toNote();
-      const interval = (60 / bpm) * 500;
-
-      metronomeInterval = setInterval(() => {
-        if (Math.random() < 0.6) {
-          const jump = Math.random() < 0.2 ? 12 : 0; // 10% chance to jump an octave
-          const rootFreq = Tone.Frequency(`${key}${octave}`, "note").toMidi() + jump;
-          const root = Tone.Frequency(rootFreq, "midi").toNote();
-          const randVol = -24 + Math.random() * 24;
-          const metVol = new Tone.Volume(randVol).toDestination();
-          const beep = new Tone.Synth({
-            oscillator: { type: 'sine' },
-            envelope: { attack: 0.01, decay: 0.1, sustain: 0, release: 0.2 }
-          }).connect(metVol);
-          beep.triggerAttackRelease(root, '8n');
-        }
-      }, interval);
-    }
-
-    function stopMetronome() {
-      clearInterval(metronomeInterval);
-    }
-
-    document.getElementById('toggle').addEventListener('click', function () {
+    document.getElementById('toggle').addEventListener('click', async function () {
       if (this.textContent === 'Start Drone') {
-        startDrone();
+        await startDrone();
         this.textContent = 'Stop Drone';
       } else {
-        stopDrone();
+        clearInterval(intervalId);
+        rootSynth.releaseAll();
         this.textContent = 'Start Drone';
+        droneActive = false;
       }
     });
 
-    document.getElementById('toggleMetronome').addEventListener('click', function () {
-      if (this.textContent === 'Start Metronome') {
-        startMetronome();
-        this.textContent = 'Stop Metronome';
-      } else {
-        stopMetronome();
-        this.textContent = 'Start Metronome';
-      }
-    });
+    document.querySelectorAll('.key-btn').forEach(btn => btn.addEventListener('click', () => {
+      selectedKey = btn.textContent;
+      updateCurrentSelection();
+      smoothTransition(selectedKey, selectedScale);
+    }));
+
+    document.querySelectorAll('.scale-btn').forEach(btn => btn.addEventListener('click', () => {
+      selectedScale = btn.textContent.toLowerCase();
+      updateCurrentSelection();
+      smoothTransition(selectedKey, selectedScale);
+    }));
+
+    updateCurrentSelection();
   </script>
 </body>
 </html>
