--- a/drone.html
+++ b/drone.html
@@ -13,10 +13,12 @@
 </head>
 <body id="instrument-container">
 
-    <p style="text-align: center;">key</p>
+    <h1>e.t. drone home</h1>
+
+    <p>key</p>
     <div class="button-group" id="noteButtons"></div>
 
-    <p style="text-align: center;">waveform</p>
+    <p>waveform</p>
     <div class="button-group" id="waveformButtons"></div>
 
     <button id="startStop">start</button>
