--- a/index.html
+++ b/index.html
@@ -147,7 +147,11 @@
     <ul>
         <li>
             minimal musical note reading,
-            (<a href="tuner.html" target="_blank" title="Tuner" aria-label="Open Tuner in a new tab.">tuner</a>)
+            (<a href="tuner.html" target="_blank" title="Tuner" aria-label="Open Tuner in a new tab.">knote reader</a>)
+        </li>
+        <li>
+            oscillating drone instrument,
+            (<a href="drone.html" target="_blank" title="Drone" aria-label="Open Drone in a new tab.">e.t. drone home</a>)
         </li>
         <li>
             collaborative and customizable budgeting,
