--- a/tuner.html
+++ b/tuner.html
@@ -14,6 +14,8 @@
 
 <body style="height: calc(100vh - 60px);">
 
+  <h1 style="text-align: center;">knote reader</h1>
+
     <div id="tuner-container">
         <div id="needle-container">
           <div id="needle"></div>
