--- a/bisnoni.html
+++ b/bisnoni.html
@@ -47,13 +47,25 @@
         <div>
             <p>rosemary focaccia</p>
             <div class="inline-text-group">
-                <p>—</p><p>olive oil, rosemary, sea salt</p>
+                <p>—</p><p>extra virgin olive oil, rosemary, sea salt</p>
+            </div>
+        </div>
+        <div>
+            <p>bianchini beans</p>
+            <div class="inline-text-group">
+                <p>—</p><p>cannellini beans, roasted garlic, lemon juice and zest, extra virgin olive oil, rosemary, sea salt, black pepper, pepper flakes, parmigiano reggiano</p>
             </div>
         </div>
         <div>
             <p>mixed salad</p>
             <div class="inline-text-group">
                 <p>—</p><p>arugula, sea salt, black pepper, pepper flakes, lemon zest, parmigiano reggiano, extra virgin olive oil, balsamic vinegar</p>
+            </div>
+        </div>
+        <div>
+            <p>grilled zucchini and eggplant</p>
+            <div class="inline-text-group">
+                <p>—</p><p>zucchini, eggplant, oregano, sea salt, black pepper</p>
             </div>
         </div>
         <div>
@@ -94,9 +106,21 @@
             </div>
         </div>
         <div>
+            <p>fagioli bianchini</p>
+            <div class="inline-text-group">
+                <p>—</p><p>fagioli cannellini, aglio arrostito, succo e scorza di limone, olio extra vergine di oliva, rosemarino, sale de mare, pepe nero, scaglie di pepe, parmigiano reggiano</p>
+            </div>
+        </div>
+        <div>
             <p>insalata mista</p>
             <div class="inline-text-group">
                 <p>—</p><p>rocket, sale de mare, pepe nero, scaglie di pepe, scorza di limone, parmigiano reggiano, olio extra vergine di oliva, aceto balsamico</p>
+            </div>
+        </div>
+        <div>
+            <p>zucchine e melanzane grigliate</p>
+            <div class="inline-text-group">
+                <p>—</p><p>zucchine, melanzane, oregano, sale de mare, pepe nero</p>
             </div>
         </div>
         <div>
